<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/vpNewsDetailsImages"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivPublicationLogo"
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/news_details_publication_logo_margin_bottom"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    tools:src="@drawable/img_publication_logo_placeholder" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvPublicationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ivPublicationLogo"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_toRightOf="@id/ivPublicationLogo"
                    android:shadowColor="@color/black_full"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_regular_3x"
                    tools:text="Eleven Media" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvPublishedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tvPublicationName"
                    android:layout_below="@id/tvPublicationName"
                    android:layout_marginTop="@dimen/margin_small"
                    android:shadowColor="@color/black_full"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_regular_2x"
                    tools:text="Posted At : Jan 01 - 6:30AM" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <org.mmtextview.components.MMTextView
                android:id="@+id/tvNewsDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_2"
                android:lineSpacingMultiplier="1.3"
                android:paddingBottom="80dp"
                android:textColor="@color/primary_text"
                tools:text="@string/dummy_news_details" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white_full"
        android:orientation="horizontal"
        android:padding="@dimen/margin_medium_2"
        android:weightSum="5">

        <org.mmtextview.components.MMTextView
            android:id="@+id/btn_comment_news"
            style="@style/AccentBorderButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_large_size"
            android:layout_weight="3"
            android:drawableLeft="@drawable/ic_chat_bubble_outline_accent_24dp"
            android:text="@string/btn_comment_news" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/btn_send_to_news"
            style="@style/AccentButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_large_size"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_send_white_24dp"
            android:text="@string/btn_send_to_news" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>